--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -5,9 +5,11 @@ one:
   description: MyString
   style: MyString
   price: MyString
+  department: one
 
 two:
   name: MyString
   description: MyString
   style: MyString
   price: MyString
+  department: two
